add a few projects

--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -62,6 +62,16 @@
             <td>Justice Suh started a repo (or maybe I did and he helped) where we could deliver a basic PHP file as a remote shell (like c99) and I thought I could make some improvements. Keeping it lean and covert, but still usable. It's supposed to look like a very generic login form, but the username is converted to base64, then the PHP script decodes it and executes it in shell. Very basic but fun for CTFs. Intentionally basic so it's as convert as possible and I can write it down and bring it into competitions.</td>
             <td><a href="https://github.com/mike-bailey/php-web-shell">Link</a></td>
         </tr>
+	<tr>
+	    <td>CyberPatriot Scorer</td>
+	    <td>scoring</td>
+	    <td>An unofficial Linux practice scoring engine for CyberPatriot. Intentionally insecure so image makers can go back and debug, also it's practice so if you cheat in practice that's your fault. I made the bash implementation, then the other gcma-cp contributers insisted it'd be easier to write in Python (despite the fact that I wrote the bash implementation pretty easily, their choice though) so hence the blank python folder.</td>
+	    <td><a href="https://github.com/gcma-cp/scoring">Link</a></td>
+	<tr>
+	    <td>Academy Portfolio</td>
+	    <td>academyportfolio.github.io</td>
+	    <td><a href="http://www.fcps.edu/marshallacademy">Marshall Academy</a> wanted their ambassadors to make a portfolio to present to professionals in related industries. I figured I'd rather self-host than use Google Sites, especially if I'm presenting myself as a front-end developer</td>
+	    <td><a href="http://academy.michaelbailey.co">Public Link</a>   <a href="https://github.com/academyportfolio/academyportfolio.github.io">Project Link</a></td>
     </tbody>
 </table>
 
