--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -72,6 +72,13 @@
 	    <td>academyportfolio.github.io</td>
 	    <td><a href="http://www.fcps.edu/marshallacademy">Marshall Academy</a> wanted their ambassadors to make a portfolio to present to professionals in related industries. I figured I'd rather self-host than use Google Sites, especially if I'm presenting myself as a front-end developer</td>
 	    <td><a href="http://academy.michaelbailey.co">Public Link</a>   <a href="https://github.com/academyportfolio/academyportfolio.github.io">Project Link</a></td>
+	</tr>
+	<tr>
+	   <td>rumpwn</td>
+	   <td>rumpwn</td>
+           <td>Rumkin is a popular online service used for basic CTF problems. It's a front-end Javascript implementation of a bunch of ciphers. I took a few (i.e. Caesar) and automated it so if I run caesar_pwn("contenttodecode") in the developer console, it'd run all 26 possibilities. I decided to expand it to stuff like automatic file carving and ultimately made a separate prettier platform called "CTF Toolkit" since nothing that process-intensive should occur on the client side. I don't think I ever open sourced it however.</td>
+	   <td>https://github.com/mike-bailey/rumpwn</td>
+	</tr>
     </tbody>
 </table>
 
