--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -77,8 +77,25 @@
 	   <td>rumpwn</td>
 	   <td>rumpwn</td>
            <td>Rumkin is a popular online service used for basic CTF problems. It's a front-end Javascript implementation of a bunch of ciphers. I took a few (i.e. Caesar) and automated it so if I run caesar_pwn("contenttodecode") in the developer console, it'd run all 26 possibilities. I decided to expand it to stuff like automatic file carving and ultimately made a separate prettier platform called "CTF Toolkit" since nothing that process-intensive should occur on the client side. I don't think I ever open sourced it however.</td>
-	   <td>https://github.com/mike-bailey/rumpwn</td>
+	   <td><a href="https://github.com/mike-bailey/rumpwn">Link</a></td>
 	</tr>
+	<tr>
+	   <td>CTF Resources</td>
+	   <td>resources</td>
+	   <td>Made contributions to an existing platform involving CTF education</td>
+	   <td><a href="https://github.com/mike-bailey/resources">Link</a></td>
+	</tr>
+	<tr>
+	   <td>Silent Netcats</td>
+	   <td>silent-netcats</td>
+	   <td>One of the ways I'd find out if netcat was a netcat in competition was to run it with -h to see it's parameter options. This is literally netcat from source, but without help output.</td>
+	   <td><a href="https://github.com/mike-bailey/silent-netcats">Link</a></td>
+	</tr>
+	<tr>
+	   <td></td>
+
+	</tr>
+<br><b>Note there are like 3 or 4 major projects that aren't even open source. One is a massive (like 500 lines) compilation of scripts for cybersecurity. I posted it contingent on saying "Please don't fork!" because you'd get DQ'd in competition for copying scripts if you forked. It got forked immediately. Another is a cyber education platform but it's SQLi vulnerable at the moment so I didn't open source it yet until I have an appropriate workaround. Another is the CTF engine, a deployable platform for scoring a CTF. It's constantly breaking and slow, as the entire backend is bash. That being said, it runs. If I ever deployed it, I'd probably ensure it's a bit more solid in the backend area.</b><br>
     </tbody>
 </table>
 
