--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -30,8 +30,8 @@
 </div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
-
-<table class="pure-table">
+Note there are like 3 or 4 major projects that aren't even open source. One is a massive (like 500 lines) compilation of scripts for cybersecurity. I posted it contingent on saying "Please don't fork!" because you'd get DQ'd in competition for copying scripts if you forked. It got forked immediately. Another is a cyber education platform but it's SQLi vulnerable at the moment so I didn't open source it yet until I have an appropriate workaround. Another is the CTF engine, a deployable platform for scoring a CTF. It's constantly breaking and slow, as the entire backend is bash. That being said, it runs. If I ever deployed it, I'd probably ensure it's a bit more solid in the backend area.<
+<br><br><table class="pure-table">
     <thead>
         <tr>
             <th>Name</th>
@@ -67,6 +67,7 @@
 	    <td>scoring</td>
 	    <td>An unofficial Linux practice scoring engine for CyberPatriot. Intentionally insecure so image makers can go back and debug, also it's practice so if you cheat in practice that's your fault. I made the bash implementation, then the other gcma-cp contributers insisted it'd be easier to write in Python (despite the fact that I wrote the bash implementation pretty easily, their choice though) so hence the blank python folder.</td>
 	    <td><a href="https://github.com/gcma-cp/scoring">Link</a></td>
+	</tr>
 	<tr>
 	    <td>Academy Portfolio</td>
 	    <td>academyportfolio.github.io</td>
@@ -92,10 +93,7 @@
 	   <td><a href="https://github.com/mike-bailey/silent-netcats">Link</a></td>
 	</tr>
 	<tr>
-	   <td></td>
-
-	</tr>
-<br><b>Note there are like 3 or 4 major projects that aren't even open source. One is a massive (like 500 lines) compilation of scripts for cybersecurity. I posted it contingent on saying "Please don't fork!" because you'd get DQ'd in competition for copying scripts if you forked. It got forked immediately. Another is a cyber education platform but it's SQLi vulnerable at the moment so I didn't open source it yet until I have an appropriate workaround. Another is the CTF engine, a deployable platform for scoring a CTF. It's constantly breaking and slow, as the entire backend is bash. That being said, it runs. If I ever deployed it, I'd probably ensure it's a bit more solid in the backend area.</b><br>
+<!--<br><b>Note there are like 3 or 4 major projects that aren't even open source. One is a massive (like 500 lines) compilation of scripts for cybersecurity. I posted it contingent on saying "Please don't fork!" because you'd get DQ'd in competition for copying scripts if you forked. It got forked immediately. Another is a cyber education platform but it's SQLi vulnerable at the moment so I didn't open source it yet until I have an appropriate workaround. Another is the CTF engine, a deployable platform for scoring a CTF. It's constantly breaking and slow, as the entire backend is bash. That being said, it runs. If I ever deployed it, I'd probably ensure it's a bit more solid in the backend area.</b><br> -->
     </tbody>
 </table>
 
