--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -30,7 +30,7 @@
 </div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
-Note there are like 3 or 4 major projects that aren't even open source. One is a massive (like 500 lines) compilation of scripts for cybersecurity. I posted it contingent on saying "Please don't fork!" because you'd get DQ'd in competition for copying scripts if you forked. It got forked immediately. Another is a cyber education platform but it's SQLi vulnerable at the moment so I didn't open source it yet until I have an appropriate workaround. Another is the CTF engine, a deployable platform for scoring a CTF. It's constantly breaking and slow, as the entire backend is bash. That being said, it runs. If I ever deployed it, I'd probably ensure it's a bit more solid in the backend area.<
+Note there are like 3 or 4 major projects that aren't even open source. One is a massive (like 500 lines) compilation of scripts for cybersecurity. I posted it contingent on saying "Please don't fork!" because you'd get DQ'd in competition for copying scripts if you forked. It got forked immediately. Another is a cyber education platform but it's SQLi vulnerable at the moment so I didn't open source it yet until I have an appropriate workaround. Another is the CTF engine, a deployable platform for scoring a CTF. It's constantly breaking and slow, as the entire backend is bash. That being said, it runs. If I ever deployed it, I'd probably ensure it's a bit more solid in the backend area.
 <br><br><table class="pure-table">
     <thead>
         <tr>
