--- a/mhacks/hiring.html
+++ b/mhacks/hiring.html
@@ -30,8 +30,8 @@
 </div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
-I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
-I'd go ahead and remodel my site using a somewhat lightweight framework (Pure CSS)
+Most of the work I'm able to do is <b>IT security, small scale penetration testing, WordPress, basic web development, etc</b>. For more, <a href="michaelbailey.co/resume.pdf">my resume is here</a> and I'm a college student who knows his place
+, so I'm not going to demand top dollar.
 
 </div>
 </body>
