--- a/mhacks/competitions.html
+++ b/mhacks/competitions.html
@@ -30,9 +30,113 @@
 </div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
-I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
-I'd go ahead and remodel my site using a somewhat lightweight framework (Pure CSS)
+<table class="pure-table">
+    <thead>
+        <tr>
+            <th>Place</th>
+            <th>Competition</th>
+            <th>Team Name</th>
+            <th>Range</th>
+	    <th>Captain?</th>
+        </tr>
+    </thead>
 
+    <tbody>
+        <tr class="pure-table-odd">
+            <td>1</td>
+            <td>Governor's Cyber Cup 2014</td>
+            <td>Lil B's Penguindows</td>
+            <td>Virginia</td>
+	    <td>No</td>
+        </tr>
+
+        <tr>
+            <td>Top 8</td>
+            <td>MDC3 2013*</td>
+            <td>Murphy's Law</td>
+            <td>MD/VA Area</td>
+	    <td>No</td>
+        </tr>
+
+        <tr class="pure-table-odd">
+            <td>Top 8</td>
+            <td>MDC3 2014*</td>
+            <td>RAID 50</td>
+	    <td>MD/VA Area</td>
+            <td>Yes</td>
+        </tr>
+
+        <tr>
+            <td>13</td>
+            <td>CyberPatriot VI ('14)</td>
+	    <td>Murphy's Law</td>
+            <td>National</td>
+            <td>No</td>
+        </tr>
+
+        <tr class="pure-table-odd">
+	    <td>1</td>
+            <td>CyberPatriot VI States ('14)</td>
+            <td>Murphy's Law</td>
+            <td>State</td>
+            <td>No</td>
+        </tr>
+
+        <tr>
+            <td>2</td>
+            <td>CyberPatriot VI Regional ('14)</td>
+            <td>Murphy's Law</td>
+            <td>Multi-State Area</td>
+	    <td>No</td>
+        </tr>
+
+        <tr class="pure-table-odd">
+            <td>Between 4-12</td>
+            <td>CyberPatriot VII Nationals ('15)</td>
+            <td>RAID 50</td>
+            <td>National</td>
+	    <td>Yes</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>CyberPatriot VII States ('15)</td>
+            <td>RAID 50</td>
+            <td>State</td>
+	    <td>Yes</td>
+        </tr>
+	<tr class="pure-table-odd">
+	    <td>1</td>
+	    <td>CyberPatriot VII Regional ('15)</td>
+	    <td>RAID 50</td>
+	    <td>Region</td>
+	    <td>Yes</td>
+	</tr>
+	<tr>
+	    <td>Top 100</td>
+	    <td>Backdoor CTF Top 100</td>
+	    <td>0x539</td>
+	    <td>National</td>
+	    <td>Yes</td>
+	</tr>
+	<tr>
+	    <td>Top 100</td>
+	    <td>HSCTF 2014</td>
+	    <td>0x539</td>
+	    <td>National</td>
+	    <td>Yes</td>
+	</tr>
+	<tr>
+	    <td>Stage 3 Completion + More</td>
+	    <td>picoCTF</td>
+	    <td>RAID 50</td>
+	    <td>National</td>
+	    <td>Yes</td>
+	</tr>
+    </tbody>
+</table> 
+<br><br>*MDC3 was poorly organized and/or biased towards Maryland teams to the extent that we were forced to stop early and the entire HS cybersecurity organization who fields the VA teams withdrew in 2015.
+<br><br>Note in 2015 I also took student command of the HS cybersecurity club "Marshall Academy Cyber"
 </div>
 </body>
 </html>
