--- a/mhacks/stem.html
+++ b/mhacks/stem.html
@@ -30,8 +30,11 @@
 </div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
-I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
-I'd go ahead and remodel my site using a somewhat lightweight framework (Pure CSS)
+
+<br><br>
+<img src="img/scholarship.jpg" /><img src="img/speech.jpg" />
+At the Marshall Academy Awards, I was lucky enough to accept a Vienna Rotary Scholarship for "Service above Self" after describing why I really compete under Marshall Academy (for institutional recognition). To the right of me accepting it is my speech from last year titled "What Academy Means to Me". Please note this was also early in my public speaking.
+			
 
 </div>
 </body>
