--- a/mhacks/stem.html
+++ b/mhacks/stem.html
@@ -33,7 +33,7 @@
 
 <br><br>
 <a href="javascript:newwindow('img/scholarship.jpg')"><img src="img/scholarship.jpg" width="20%"></a><a href="javascript:newwindow('img/speech.jpg')"><img src="img/speech.jpg" width="20%"></a>
-At the Marshall Academy Awards, I was lucky enough to accept a Vienna Rotary Scholarship for "Service above Self" after describing why I really compete under Marshall Academy (for institutional recognition). To the right of me accepting it is my speech from last year titled "What Academy Means to Me". Please note this was also early in my public speaking.
+<br>At the Marshall Academy Awards, I was lucky enough to accept a Vienna Rotary Scholarship for "Service above Self" after describing why I really compete under Marshall Academy (for institutional recognition). To the right of me accepting it is my speech from last year titled "What Academy Means to Me". Please note this was also early in my public speaking.
 			
 
 </div>
