--- a/mhacks/interest.html
+++ b/mhacks/interest.html
@@ -22,7 +22,7 @@
         <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
         <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
         <li class="pure-menu-item"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
-        <li class="pure-menu-item"><a href="interest.html" class="pure-menu-link">Interests</a></li>
+        <li class="pure-menu-item active"><a href="interest.html" class="pure-menu-link">Interests</a></li>
 </ul>
 </div>
 <div style="background-color: lightgray">
