--- a/mhacks/competitions.html
+++ b/mhacks/competitions.html
@@ -19,7 +19,7 @@
         <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="info.html" class="pure-menu-link">About Me</a></li>
-        <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
+        <li class="pure-menu-item active"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
         <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
         <li class="pure-menu-item"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
         <li class="pure-menu-item"><a href="interest.html" class="pure-menu-link">Interests</a></li>
