--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -17,7 +17,7 @@
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
         <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
+        <li class="pure-menu-item active"><a href="projects.html" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="info.html" class="pure-menu-link">About Me</a></li>
         <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
         <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
