--- a/mhacks/hiring.html
+++ b/mhacks/hiring.html
@@ -21,7 +21,7 @@
         <li class="pure-menu-item"><a href="info.html" class="pure-menu-link">About Me</a></li>
         <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
         <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
-        <li class="pure-menu-item active"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
+        <li class="pure-menu-item pure-menu-selected"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
         <li class="pure-menu-item"><a href="interest.html" class="pure-menu-link">Interests</a></li>
 </ul>
 </div>
