--- a/mhacks/info.html
+++ b/mhacks/info.html
@@ -18,7 +18,7 @@
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
         <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
-        <li class="pure-menu-item  pure-menu-selected active"><a href="info.html" class="pure-menu-link">About Me</a></li>
+        <li class="pure-menu-item  pure-menu-selected"><a href="info.html" class="pure-menu-link">About Me</a></li>
         <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
         <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
         <li class="pure-menu-item"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
