--- a/skills.html
+++ b/skills.html
@@ -9,14 +9,6 @@
 <script src="main.js"></script>
 <link rel="stylesheet" href="main.css">
 <title>Mike's Page</title>
-<script>
-function phonenum() {
-	var _0x9ea6=["\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x6E\x75\x6D\x62\x65\x72","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x35\x37\x31\x32\x33\x34\x31\x30\x39\x35"];document[_0x9ea6[2]](_0x9ea6[1])[_0x9ea6[0]]=_0x9ea6[3];
-}
-function email() {
-	var _0xe61e=["\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x65\x6D\x61\x69\x6C\x61\x64\x64\x79","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x6D\x62\x61\x69\x6C\x65\x31\x38\x40\x67\x6D\x75\x2E\x65\x64\x75"];document[_0xe61e[2]](_0xe61e[1])[_0xe61e[0]]=_0xe61e[3];
-}
-</script>
 </head><body>
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
@@ -31,8 +23,8 @@ function email() {
 	</div>
 	<div class="collapse navbar-collapse" id="navbarcollapse" aria-expanded="false">
 	<ul class="nav navbar-nav">
-		<li role="presentation" class="active"><a href="index.html">Home</a></li>
-		<li role="presentation"><a href="skills.html">Skills</a></li>
+		<li role="presentation"><a href="index.html">Home</a></li>
+		<li role="presentation" class="active"><a href="skills.html">Skills</a></li>
 		<li role="presentation"><a href="projects.html">Projects</a></li>
 		<li role="presentation"><a href="edu.html">Education</a></li>
 		<li role="presentation"><a href="press.html">Press/Recognition</a></li>
@@ -44,8 +36,6 @@ function email() {
 	</div>
 </nav>
 <div class="container-fluid">
-Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (& Vienna, VA), currently enrolled at George Mason University.
-<br><br><a href="javascript:phonenum()">Expose Phone Number</a><div id="number"> ###-###-####</div>
-<br><br><a href="javascript:email()">Expose Email Address</a><div id="emailaddy">*******@***.***</div>
+Literally none. (Page under construction)
 </div>
 </body></html>
