--- a/terms.html
+++ b/terms.html
@@ -9,14 +9,6 @@
 <script src="main.js"></script>
 <link rel="stylesheet" href="main.css">
 <title>Mike's Page</title>
-<script>
-function phonenum() {
-	var _0x9ea6=["\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x6E\x75\x6D\x62\x65\x72","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x35\x37\x31\x32\x33\x34\x31\x30\x39\x35"];document[_0x9ea6[2]](_0x9ea6[1])[_0x9ea6[0]]=_0x9ea6[3];
-}
-function email() {
-	var _0xe61e=["\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x65\x6D\x61\x69\x6C\x61\x64\x64\x79","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x6D\x62\x61\x69\x6C\x65\x31\x38\x40\x67\x6D\x75\x2E\x65\x64\x75"];document[_0xe61e[2]](_0xe61e[1])[_0xe61e[0]]=_0xe61e[3];
-}
-</script>
 </head><body>
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
@@ -31,7 +23,7 @@ function email() {
 	</div>
 	<div class="collapse navbar-collapse" id="navbarcollapse" aria-expanded="false">
 	<ul class="nav navbar-nav">
-		<li role="presentation" class="active"><a href="index.html">Home</a></li>
+		<li role="presentation"><a href="index.html">Home</a></li>
 		<li role="presentation"><a href="skills.html">Skills</a></li>
 		<li role="presentation"><a href="projects.html">Projects</a></li>
 		<li role="presentation"><a href="edu.html">Education</a></li>
@@ -44,8 +36,19 @@ function email() {
 	</div>
 </nav>
 <div class="container-fluid">
-Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (& Vienna, VA), currently enrolled at George Mason University.
-<br><br><a href="javascript:phonenum()">Expose Phone Number</a><div id="number"> ##########</div>
-<br><br><a href="javascript:email()">Expose Email Address</a><div id="emailaddy">*******@***.***</div>
+<div id="CyberPatriot">
+<h2>CyberPatriot</h2>
+<b>CyberPatriot</b> is a national cyber education program. I participated in it in my Junior and Senior year of high school, studying all 3 subject matters. They test you on Windows, Linux (Ubuntu) and Cisco. I was on Windows for my first year and converted to Linux in my second. I was a backup (read as: understudy) for Cisco.
+<br><br><br><br>
+</div>
+<div id="NanoTech">
+<h2>NanoTech Computers</h2>
+<b>NanoTech Computers</b> is a company in Old Town Alexandria, Virginia, that I cold-approached when I moved to Old Town with my family when I graduated high school. I was hired to do help desk work but ultimately found myself doing sysadmin work.
+<br><br><br><br>
+</div>
+<div id="Metier">
+<h2>Metier Defense Solutions</h2>
+<b>Metier Defense Solutions</b> was a company I worked for in my junior year summer in 2014. My coach worked there and, despite not necessarily seeing eye-to-eye I was hired to work on research, a little bit of QA testing, and IT work generally concentrated in automation (no, nothing like DevOps, like scripting if anything).
+</div>
 </div>
 </body></html>
