--- a/skills.html
+++ b/skills.html
@@ -4,6 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="strap/css/bootstrap.min.css">
 <link rel="stylesheet" href="strap/css/bootstrap-theme.min.css">
+<style>
+img {
+	padding-left: 10px;
+}
+</style>
 <script src="jquery.min.js"></script>
 <script src="strap/js/bootstrap.min.js"></script>
 <script src="main.js"></script>
