--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,10 @@
 <style>
 img {
 	padding-left: 10px;
+	padding-right: 10px;
+}
+container-fluid {
+	padding-left: 10px;
 }
 </style>
 <script src="jquery.min.js"></script>
