Padding finally done please stop committing

--- a/skills.html
+++ b/skills.html
@@ -6,11 +6,7 @@
 <link rel="stylesheet" href="strap/css/bootstrap-theme.min.css">
 <style>
 img {
-	padding-left: 10px;
-	padding-right: 10px;
-}
-container-fluid {
-	padding-left: 10px;
+	padding-right: 3%;
 }
 </style>
 <script src="jquery.min.js"></script>
