--- a/skills.html
+++ b/skills.html
@@ -41,7 +41,7 @@ img {
 	</div>
 </nav>
 <div class="container-fluid">
-<img src="img/aws.png" align="left" width="25%" /><b>AWS EC2.</b> I run a great deal of infrastructure, including the subdomains: (some may not be live, * indicates it probably is) <a href="http://oldtown.michaelbailey.co">oldtown.</a>, <a href="http://gmu.michaelbailey.co">gmu.</a> and macp[1-20]. under michaelbailey.co. I've run a variety of security groups and have managed over 20 concurrent EC2 instances at any particular time. Currently I limit it to two for billing purposes. My dad works at AWS (in charge
+<img src="img/aws.png" align="left" width="25%" /><b>AWS EC2.</b> I run a great deal of infrastructure, including the subdomains: (some may not be live, * indicates it probably is) <a href="http://oldtown.michaelbailey.co">oldtown.*</a>, <a href="http://gmu.michaelbailey.co">gmu.*</a> and macp[1-20]. under michaelbailey.co. I've run a variety of security groups and have managed over 20 concurrent EC2 instances at any particular time. Currently I limit it to two for billing purposes. My dad works at AWS so it becomes a common point of discussion.
 </div>
 <div class="container-fluid">
 <hr style="visibility:hidden;"><br>
