--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function email() {
 	</div>
 </nav>
 <div class="container-fluid">
-Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (& Vienna, VA), currently enrolled at George Mason University.
+Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University. I should probably disclaim this website may not be fully up to date.
 <br><br><a href="javascript:phonenum()">Expose Phone Number</a><div id="number"> ##########</div>
 <br><br><a href="javascript:email()">Expose Email Address</a><div id="emailaddy">*******@***.***</div>
 </div>
