--- a/skills.html
+++ b/skills.html
@@ -6,8 +6,9 @@
 <link rel="stylesheet" href="strap/css/bootstrap-theme.min.css">
 <style>
 img {
-	padding-right: 3%;
+	display: block; margin-left: auto; margin-right: auto;
 }
+.tab { margin-left: 40px; }
 </style>
 <script src="jquery.min.js"></script>
 <script src="strap/js/bootstrap.min.js"></script>
@@ -41,13 +42,9 @@ img {
 	</div>
 </nav>
 <div class="container-fluid">
-<img src="img/aws.png" align="left" width="25%" /><b>AWS EC2.</b> I run a great deal of infrastructure, including the subdomains: (some may not be live, * indicates it probably is) <a href="http://oldtown.michaelbailey.co">oldtown.*</a>, <a href="http://gmu.michaelbailey.co">gmu.*</a> and macp[1-20]. under michaelbailey.co. I've run a variety of security groups and have managed over 20 concurrent EC2 instances at any particular time. Currently I limit it to two for billing purposes. My dad works at AWS so it becomes a common point of discussion.
-</div>
-<div class="container-fluid">
 <hr style="visibility:hidden;"><br>
 <img src="img/penguin.png" align="left" width="15%" /><b>Linux experience</b>. I have run a decent amount of Linux experience, having competed in <a href="terms.html#CyberPatriot">CyberPatriot</a> as the only Linux (Ubuntu) operator and taken my team to Nationals. I also helped maintain Fedora servers at Metier Defense Solutions when I was there and running all of the infrastructure at <a href="terms.html#NanoTech">NanoTech</a> Computers. NanoTech runs CentOS and Ubuntu. I'm mainly proficient in Ubuntu. My backup laptop/travel laptop is Ubuntu 14.04.
 </div>
-<div class="container-fluid">
 <hr style="visibility:hidden;"><br>
 <img src="img/sec.jpg" align="left" width="30%" /><b>System Hardening</b>. I worked on Windows, Linux, and Cisco iOS routers. After CyberPatriot and moving into CCDC I keep a focus on understanding configurations made to a system, how it impacts the operational mission of the parent organization, and the security implications of each setting. Two things I focus on is the concept of least privilege and future proofing.
 </div>
