--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@ function email() {
 	</div>
 </nav>
 <div class="container-fluid">
-Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University. I should probably disclaim this website may not be fully up to date.
+Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University.<br><br><b>I should probably disclaim this website may not be fully up to date.<br><br>I spend way more time doing stuff than I do documenting it on my website. If you're a recruiter directed here:
+<ol>
+	<li>Please note I've been off the market for a while doing internships and leading initiatives at Mason so this may not be very up to date</li>
+	<li>I'm probably in midterms, so I'm kind of putting my exams before my website, which I'd hope any sane company would get</li>
+</ol>
 <br><br><a href="javascript:phonenum()">Expose Phone Number</a><div id="number"> ##########</div>
 <br><br><a href="javascript:email()">Expose Email Address</a><div id="emailaddy">*******@***.***</div>
 </div>
