--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ function email() {
 	</div>
 </nav>
 <div class="container-fluid">
+<h2><a href="https://52.55.235.53/">BSIDES EXAMPLE CTF HERE</a></h2>
+<br>Note: Recycled problems
+
+	<br><br>
 Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University.<br><br><b>I should probably disclaim this website may not be fully up to date.<br><br>I spend way more time doing stuff than I do documenting it on my website. If you're a recruiter or something directed here:
 <ol>
 	<li>Please note I've been off the market for a while doing internships and leading initiatives at Mason so this may not be very up to date</li>
