--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function email() {
 </nav>
 <div class="container-fluid">
 <h2><a href="https://52.55.235.53/">BSIDES EXAMPLE CTF HERE</a></h2>
-<br>Note: Recycled problems
+<br>Note: Recycled problems<br><br>For the talk: <a href="/bsides.pptx">click here.</a>
 
 	<br><br>
 Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University.<br><br><b>I should probably disclaim this website may not be fully up to date.<br><br>I spend way more time doing stuff than I do documenting it on my website. If you're a recruiter or something directed here:
