--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ function email() {
 <div class="container-fluid">
 
 	<br><br>
-Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University.<br><br><b>This website may not be fully up to date.<br><br>I spend way more time doing stuff than I do documenting it on my website. If you're a recruiter or something directed here note I update my resume and my LinkedIn more than I do my website.
+Welcome to the homepage of Michael Bailey. This is the Michael Bailey from Alexandria, VA (previously Vienna, VA), currently enrolled at George Mason University.<br><br><b>This website may not be fully up to date.<br><br>I spend way more time doing stuff than I do documenting it on my website. If you're a recruiter or something directed here note I update my resume and my LinkedIn more than I do my website.</b>
 <br><br><a href="javascript:phonenum()">Expose Phone Number</a><div id="number"> ##########</div>
 <br><br><a href="javascript:email()">Expose Email Address</a><div id="emailaddy">*******@***.***</div>
-<br><br>For my recent BSides talk: <a href="/bsides.pptx">click here.</a>
+<br><br>For my recent BSides talk (PPTX): <a href="/bsides.pptx">click here.</a>
 </div>
 </body></html>
