--- a/competition.html
+++ b/competition.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="main.css">
 <title>Mike's Page</title>
 </head><body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 	<div class="navbar-header">
 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
@@ -39,7 +39,7 @@
 <h3>Upcoming Competitions</h3>
 <b>CCDC</b>: A major computer network defense competition across the nation. I'm really excited for this. There were a few limiting factors in HS that no longer exist meaning I can now unleash my full potential in CCDC and I look forward to it. Mason has previously had a very poor track record in this competition and I hope to try to put them on the map in it.
 <h3>Ongoing Competitions:</h3>
-<b>MDC3</b>: Maryland Cyber Challenge. Has a history of falling apart, this year was no expection. Their network crashed at Finals (Attack/Defense) and I will compete March 5th with a GMU team. 
+<b>MDC3</b>: Maryland Cyber Challenge. Has a history of falling apart, this year was no expection. Their network crashed at Finals (Attack/Defense) and I will compete March 5th with a GMU team.
 <br><b>CTF Crawling:</b> I use <a href="http://ctftime.org">CTFTime</a> to spend some of my weekends honing my abilities. I used to compete as <i>0x539</i> with a friend, but we're often too busy now to get a time together. I'm starting to compete solo as patriotdown.
 <h3>Past Competitions:</h3>
 <b>CyberPatriot</b>: In my year, the team I ran proved we were the top team in the state by far in computer network defense. Schools everywhere tried to change that to no success. We ultimately went to nationals after besting the region, including the team that supposedly destroyed us in MDC3.
