--- a/edu.html
+++ b/edu.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="main.css">
 <title>Mike's Page</title>
 </head><body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 	<div class="navbar-header">
 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
