--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ function email() {
 }
 </script>
 </head><body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 	<div class="navbar-header">
 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
