--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="main.css">
 <title>Mike's Page</title>
 </head><body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 	<div class="navbar-header">
 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarcollapse" aria-expanded="false">
@@ -54,11 +54,11 @@
 			</div>
 			<div class="col-sm-1" style="max-width: 25%">
 				<img src="img/aws/sqs.png" style="max-width: 100%; padding-bottom: 10%; display: block; margin-left: auto; margin-right: auto;" max-width="100%">
-				SQS 
+				SQS
 			</div>
 			<div class="col-sm-1" style="max-width: 25%">
 				<img src="img/aws/sns.png" style="max-width: 100%; padding-bottom: 10%; display: block; margin-left: auto; margin-right: auto;" max-width="100%">
-				SQS 
+				SQS
 			</div>
 			<div class="col-sm-1" style="max-width: 25%">
 				<img src="img/aws/s3.png" style="max-width: 93%; display: block; margin-left: auto; margin-right: auto;">S3
