--- a/terms.html
+++ b/terms.html
@@ -28,7 +28,7 @@
 		<li role="presentation"><a href="projects.html">Projects</a></li>
 		<li role="presentation"><a href="edu.html">Education</a></li>
 		<li role="presentation"><a href="press.html">Press/Recognition</a></li>
-		<li role="presentation"><a href="resume.pdf">Resume (PDF)</a></li>
+		<li role="presentation"><a href="resume.pdf">Resume</a></li>
 		<li role="presentation"><a href="personal.html">Personal</a></li>
 		<li role="presentation"><a href="competition.html">Competition</a></li>
 	</ul>
