--- a/projects.html
+++ b/projects.html
@@ -19,18 +19,26 @@
 	<span class="icon-bar"></span>
 	<span class="icon-bar"></span>
 	</button>
-	<a class="navbar-brand">Mike Bailey</a>
+<a class="navbar-brand">Mike Bailey</a>
+	<p class="navbar-text">Jr Sec Engineer @ Crypsis, Mason CC</p>
 	</div>
 	<div class="collapse navbar-collapse" id="navbarcollapse" aria-expanded="false">
-	<ul class="nav navbar-nav">
+		<ul class="nav navbar-nav">
 		<li role="presentation"><a href="index.html">Home</a></li>
 		<li role="presentation"><a href="skills.html">Skills</a></li>
 		<li role="presentation" class="active"><a href="projects.html">Projects</a></li>
-		<li role="presentation"><a href="edu.html">Education</a></li>
-		<li role="presentation"><a href="press.html">Press/Recognition</a></li>
-		<li role="presentation"><a href="resume.pdf">Resume (PDF)</a></li>
-		<li role="presentation"><a href="personal.html">Personal</a></li>
-		<li role="presentation"><a href="competition.html">Competition</a></li>
+		<li role="presentation"><a href="resume.pdf">Resume</a></li>
+		<li role="presentation" ><a href="personal.html">Personal</a></li>
+		<li role="presentation" class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      At GMU<span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+			<li role="presentation"><a href="edu.html">Education</a></li>
+      <li role="presentation"><a href="competition.html">Competition</a></li>
+			<li role="presentation"><a href="press.html">Press/Recognition</a></li>
+    </ul>
+  	</li>
 	</ul>
 	</div>
 	</div>
