--- a/edu.html
+++ b/edu.html
@@ -45,16 +45,35 @@
 </nav>
 <div class="container">
 <br>
-<div class="col-xs-1"></div>
-<div class="col-xs-5">
-<div class="col-xs-3"></div><div class="col-xs-6" style="margin-bottom: 5%;"><div id="gmucircle"></div></div><div class="col-xs-3"></div>
-<center><h3>George Mason University</h3></center>
-<br>Class of 2019<br><br><i>GMU STEM Outreach, GMU SRCT, GMU Linux User Group/Patriot Hackers  occasionally.
+<div class="row">
+<div class="col-md-2"></div>
+<div class="col-md-2">
+<img src="img/gmu.jpg" style="width: 100%">
 </div>
-<div class="col-xs-5"><div class="col-xs-3"></div><div class="col-xs-6" style="margin-bottom: 5%;"><div id="gcmcircle"></div></div><div class="col-xs-3"></div>
-<center><h3>Marshall Academy</h3></center>
-<br>Class of 2015<br><br><i>Took Network Administration and A+ Hardware. Marshall Academy Cyber Club Ex-President.</i>
+<div class="col-md-6">
+<h3>George Mason University</h3>
+<br><b>Class of 2019 (extra semester)</b>
+<br><br><b>Mason CC President and Founder</b>: Filed the paperwork personally and procured membership to start GMU's first CTF club and what is now GMU's sole cybersecurity organization.
+<br /><b>GMU SRCT Systems Administrator</b>: Managing servers under the *.gmu.edu domain, soon to be the only student who's not a GMU employee and also has datacenter swipe access.
+<br />ex-GMU STEM Outreach: Helped promote GMU through STEM to all audiences, especially with camps about topics like web app security to younger audiences. I was told they lost funding and was not invited back as such. My time also became worth more than GMU could pay for me to promote them in that program.
+<br />ex-GMU Linux User Group/Patriot Hackers before they were deregistered from the university due to inactivity.
+<br /><b>IT Major</b> with Information Security concentration. Started as a Computer Science major but I'm not <i>that</i> good at Math.
 </div>
-<div class="col-xs-1"></div>
+<div class="col-md-2"></div>
+</div>
+<br />
+<div class="row">
+<div class="col-md-2"></div>
+<div class="col-md-2">
+<img src="img/marshall.jpg" style="width: 100%">
+</div>
+<div class="col-md-6">
+<h3>Marshall, a Governor's STEM Academy</h3>
+<br>
+<b>Class of 2015</b>
+<br><br><i>Took Network Administration (Microsoft Technology Associate certification) and (CompTIA) A+ Hardware.
+<br/>Marshall Academy Cyber Club Ex-President</i>
+</div>
+<div class="col-md-2"></div>
 </div>
 </body></html>
