--- a/competition.html
+++ b/competition.html
@@ -44,13 +44,20 @@
 	</div>
 </nav>
 <div class="container-fluid">
-<h3>Upcoming Competitions</h3>
-<b>CCDC</b>: A major computer network defense competition across the nation. I'm really excited for this. There were a few limiting factors in HS that no longer exist meaning I can now unleash my full potential in CCDC and I look forward to it. Mason has previously had a very poor track record in this competition and I hope to try to put them on the map in it.
-<h3>Ongoing Competitions:</h3>
-<b>MDC3</b>: Maryland Cyber Challenge. Has a history of falling apart, this year was no expection. Their network crashed at Finals (Attack/Defense) and I will compete March 5th with a GMU team.
-<br><b>CTF Crawling:</b> I use <a href="http://ctftime.org">CTFTime</a> to spend some of my weekends honing my abilities. I used to compete as <i>0x539</i> with a friend, but we're often too busy now to get a time together. I'm starting to compete solo as patriotdown.
-<h3>Past Competitions:</h3>
-<b>CyberPatriot</b>: In my year, the team I ran proved we were the top team in the state by far in computer network defense. Schools everywhere tried to change that to no success. We ultimately went to nationals after besting the region, including the team that supposedly destroyed us in MDC3.
-<b>MDC3</b>: Maryland Cyber Challenge. Finalist for two years in high school, but an absolute mess. Network failures and suspect disadvantages specifically for Virginia teams. I gave a writeup for this after the groups involved had a great deal of uproar and I got positive feedback on my writeup from a team member of Samurai (CTF team) and some Maryland students.
+<h1>Recent Competitions (last 6 months)</h1>
+<h3>Virginia Cyber Cup</h3>
+I was recently on the winning team for the VA Cyber Cup in 2018. It was at VMI and featured a jeopardy CTF. For more, <a href="https://competitivecyber.club/articles/feb24wknd/">see the club article</a>. The whole team contributed and this should absolutely be written off as a team competition and not an individual one.
+<h3>Booz Allen CTF</h3>
+I won a $100 gift card from Booz Allen at the GMU MIX on campus for essentially beating out the rest of the campus in a CTF. It was more quiz-like than it was jeopardy-like but featured some immensely strong competition. For more see the <a href="https://getconnected.gmu.edu/news/118344">club-to-campus news article</a>.
+<h3>Capital One Wargame</h3>
+I was recently on the winning team for the Capital One Wargame, a jeopardy competition hosted in Capital One's SOC. It featured other GMU students and questions on things like ciphers, packet captures, and general trivia.
+<h3>AWS Programming Challenge</h3>
+Advertised as either a CTF or Hackathon, the AWS Coding Challenge was a challenge hosted in AWS's Herndon office. I, along with another member of our team won an Echo. It was largely a tie amongst multiple teams so prizes got raffled, but we tied for first. There were five challenges, including Ruby test cases, trivial SQL injection, API usage, Git usage and Logs. I solved (I believe) 3 out of 5 of them. I solved the Ruby one by writing a comparable method, API usage one by crawling to the final endpoint on a hidden (browser-called) API, and possibly Git, though there were known issues with that challenge.
+<br /><br />
+I was also on GMU's CCDC team before it was disbanded and intend to bring it back under more appropriate leadership.<br /><br />
+For more events, just ask! This is just a sample.<br/>
+
+<h1>Future Competitions</h1>
+In addition to looking at National Cyber League and CCDC, <a href="https://competitivecyber.club/meeting/">most competitions listed CC intends to attend</a> are ones I intend to.
 </div>
 </body></html>
