--- a/pup/index.html
+++ b/pup/index.html
@@ -3,5 +3,6 @@
         <img src="pup1.jpg" />
         
         <img src="pup2.jpg" />
+        Named Sonny originally, likely going to call him Milo. ~7-8 weeks old (as of May 1 2020).
     </body>
 </html>
