--- a/pup/index.html
+++ b/pup/index.html
@@ -2,7 +2,8 @@
     <body>
         <img src="pup1.jpg" />
         
-        <img src="pup2.jpg" />
-        Named Sonny originally, likely going to call him Milo. ~7-8 weeks old (as of May 1 2020).
+        <img src="pup2.jpg" /><br /><br />
+        <h3>Named Sonny originally, likely going to call him Milo. ~7-8 weeks old (as of May 1 2020).</h3>
+        
     </body>
 </html>
