--- a/pup/index.html
+++ b/pup/index.html
@@ -3,7 +3,7 @@
         <img src="pup1.jpg" />
         
         <img src="pup2.jpg" /><br /><br />
-        <h3>Named Sonny originally, likely going to call him Milo. ~7-8 weeks old (as of May 1 2020). Tiny cavapoo.</h3>
+        <h3>Named Sonny originally, likely going to call him Milo. ~7-8 weeks old (as of May 1 2020). Relatively small cavapoo.</h3>
         
     </body>
 </html>
